# http-client

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: HISTORY_STORAGE.md
src/: main.rs
src/components/: enums.rs  history.rs  http_client.rs  mod.rs  pick_list.rs  styles.rs  utils.rs
src/components/ui/: body_editor.rs  error_message.rs  header.rs  history_view.rs  key_value_list.rs  mod.rs  request_tabs.rs  response_view.rs  timeout_config.rs
