[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
chrono = "0.4"
